--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>React Minimal</title>
+    <style type="text/css">
+      html,
+      body {
+        height: 100%;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
